fixing small issuses with part1 and etl formating

--- a/Part1_ETL.ipynb
+++ b/Part1_ETL.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "__[3. MongoDB & PyMongo](#bullet6)__\n",
     "\n",
-    "__[4. Conclusions](#bullet7)__\n",
+    "__[4. Next Steps](#bullet7)__\n",
     "\n",
     "\n",
     "## Introduction <a class=\"anchor\" id=\"bullet1\"></a>\n",
