adding a bunch, downlaing dataset from kaggle, part 1 env, and fixing typos

--- a/Part1_ETL.ipynb
+++ b/Part1_ETL.ipynb
@@ -62,7 +62,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we import the datatypes that we will need for ETL and the functions module from `spark.sql`"
+    "First we download and extract the dataset from the Kaggle website:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.system(\"kaggle datasets download -d kazanova/sentiment140\")\n",
+    "os.system(\"unzip sentiment140.zip\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we import the datatypes that we will need for ETL and the functions module from `spark.sql`"
    ]
   },
   {
@@ -83,9 +112,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "### Extract <a class=\"anchor\" id=\"bullet3\"></a>\n",
-    "---------\n",
+    "-----------\n",
     "\n",
     "Now we need to define the schema of the <a href=\"https://www.kaggle.com/kazanova/sentiment140\">CSV file</a> we want to read.  Alternately, we could have Spark infer the schema, however, this would take longer since Spark would have to scan the file twice: once to infer the schema and once to read in the data."
    ]
@@ -118,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"ETL/training.1600000.processed.noemoticon.csv\"\n",
+    "path = \"training.1600000.processed.noemoticon.csv\"\n",
     "\n",
     "# read in the csv as a datafame\n",
     "df   = spark.read.format(\"csv\")\\\n",
