adapting part 1 for new blog

--- a/sentimentanalysis1.ipynb
+++ b/sentimentanalysis1.ipynb
@@ -9,6 +9,9 @@
     "# Sentiment Analysis, Part1:  ETL With PySpark and MongoDB\n",
     "------------------------------------------------\n",
     "\n",
+    "## Contents\n",
+    "-------------\n",
+    "\n",
     "__[1. Introduction](#bullet1)__\n",
     "\n",
     "__[2. ETL With PySpark](#bullet2)__\n",
@@ -1113,11 +1116,11 @@
     "\n",
     "Each database in MongoDB contains **collections**, each collection contains a set of **documents** that are stored as JSON objects.  In our current example each tweet is a document in our `tweets` collection in the `db_twitter` database.  MongoDB has nice GUI called <a href=\"https://www.mongodb.com/products/compass\">Compass</a>. An example view of our `tweets` collection using Compass is shown below:\n",
     "\n",
-    "![](images/Compass1.png)\n",
+    "<img src=\"https://github.com/mdh266/TwitterSentimentAnalysis/blob/808d8e9c8db111147ce8f4cbf5806d4a9385b7b2/images/Compass1.png?raw=1\">\n",
     "\n",
     "Compass gives a nice interface to our database and allows us to run interactive queries on collections and displays easy to read results.  One of the most useful features is the ability to analyze your schema. as shown below:\n",
     "\n",
-    "![](images/Compass2.png)\n",
+    "<img src=\"https://github.com/mdh266/TwitterSentimentAnalysis/blob/808d8e9c8db111147ce8f4cbf5806d4a9385b7b2/images/Compass2.png?raw=1\">\n",
     "\n",
     "\n",
     "This utility samples our collection to determine the datatypes and values of the fields in your documents.  The ability to discern datatypes is especially useful for this type of NoSQL database because fields can have multiple different datatypes.  This is in contrast to traditional SQL databases where the entries in tables must rigidly adhere to the defined datatype of that field.  \n",
@@ -1493,13 +1496,11 @@
     "One extremely useful indexing scheme is indexing on the text of the documents in your collection.  We can index the `tweet` field our `tweets` collection as shown from the Mongo shell below,\n",
     "\n",
     "\n",
-    "![](images/Index1.png)\n",
+    "<img src=\"https://github.com/mdh266/TwitterSentimentAnalysis/blob/808d8e9c8db111147ce8f4cbf5806d4a9385b7b2/images/Index1.png?raw=1\">\n",
     "\n",
     "Once the index is created you will see:\n",
     "\n",
-    "\n",
-    "![](images/Index2.png)\n",
-    "\n",
+    "<img src=\"https://github.com/mdh266/TwitterSentimentAnalysis/blob/808d8e9c8db111147ce8f4cbf5806d4a9385b7b2/images/Index2.png?raw=1\">\n",
     "\n",
     "Notice that before creating the above index we actually had one index, but after we have two.  The reason is that we have index before indexing our collection is because every collection is by default indexed on the `_id` field.  This also shows us that collections can have multiple indices.   \n",
     "\n",
